fix(ui): apply visibility style to status bar (#107)
I tried using VoiceOver with Peerio (result was not so good, as expected
with Electron-based apps), however the first thing it read was "Peerio
2... You seem to be offline...", which wasn't true -- this status bar
was hidden.

To properly hide it from screenreader, use visibility: hidden/visible.
Animations still work as before.

--- a/src/ui/Root.scss
+++ b/src/ui/Root.scss
@@ -21,8 +21,10 @@ $status-bar-height: 36px;
   background-image: $gradient-to-right;
   background-size: 400%;
   border-radius: 4px;
+  visibility: hidden;
 
   &.visible {
+    visibility: visible;
     top: 0;
     animation: 4s infinite gradient;
   }
